# OAMK-OO2026Koodit

./: .gitignore  README.md
practice_tasks/week4/MittariKomposition/: mittari.cpp  mittari.h
practice_tasks/week4/MittariPerimalla/: dht.h  mittari.h
practice_tasks/week4/MuutamiaEsimerkkeja/: main.cpp
practice_tasks/week_2/Isa_Poika_luokka_esimerkki/: CMakeLists.txt  father.cpp  father.h  main.cpp  son.cpp  son.h
practice_tasks/week_2/mittari/: CMakeLists.txt  Mittari.cpp  define.h  dht.cpp  dht.h  lcd.cpp  lcd.h  main.cpp  mittari.h  random.cpp  random.h
practice_tasks/week_2/random_generator/: CMakeLists.txt  main.cpp  random.cpp
week_1/Arvauspeli/: CMakeLists.txt  main.cpp
week_1/src/: main.cpp
week_2/Arvauspeli_oliopohjaisesti/: CMakeLists.txt  game.cpp  game.h  main.cpp
week_2/src/: game.cpp  game.h  main.cpp
week_3/Italialainen_kokki/: CMakeLists.txt  chef.cpp  chefs.h  italianChef.cpp  main.cpp
week_3/src/: chef.cpp  chefs.h  italianChef.cpp  main.cpp
week_4/Pankkitilit/: CMakeLists.txt  asiakas.cpp  asiakas.h  main.cpp  tilit.cpp  tilit.h
